// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 23.04,
    }
  }
>
  "What you are is God's gift to you, what you become is your gift to God." ― Hans Urs von Balthasar
</Text>
`;

exports[`the H4 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 23.04,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H4 component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 6,
      "height": 16,
      "marginVertical": 3.5199999999999996,
      "width": "80%",
    }
  }
/>
`;

exports[`the H4 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 16,
      "lineHeight": 23.04,
    }
  }
>
  Default H4 text
</Text>
`;
